# VoxType

./: .env.example  .gitignore  AGENTS.md  README.md  capsule.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: README.md  api-contract.md  architecture.md  development-plan.md  progress.md
docs/adr/: 001-choose-tauri-rust.md  002-use-cpal-for-audio.md  003-stt-provider-abstraction.md
docs/design/: capsule-design.md  ui-design.md
docs/phases/: 01-scaffold.md  02-audio-hotkey.md  03-stt-integration.md  04-keyboard-output.md  05-capsule-ui.md  06-llm-polish.md  07-settings-history.md  08-local-whisper-packaging.md
src/: App.tsx  capsule.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  hotkey_macos.rs  lib.rs  main.rs  paths.rs  state.rs
src-tauri/src/audio/: capture.rs  device.rs  mod.rs  preprocess.rs  vad.rs
src-tauri/src/commands/: clipboard.rs  history.rs  mod.rs  model.rs  recording.rs  settings.rs
src-tauri/src/config/: mod.rs
src-tauri/src/history/: mod.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/llm/: mod.rs  openai_compat.rs  prompts.rs
src-tauri/src/model_manager/: mod.rs
src-tauri/src/output/: clipboard.rs  ime.rs  keyboard.rs  mod.rs
src-tauri/src/pipeline/: mod.rs  pipeline.rs
src-tauri/src/stt/: common.rs  config.rs  deepgram.rs  groq.rs  local.rs  mod.rs  openai_whisper.rs
src/hooks/: useRecording.ts
src/i18n/: en-US.ts  index.ts  zh-CN.ts
src/stores/: historyStore.ts  recordingStore.ts  settingsStore.ts
src/styles/: global.css
(+5 files in other folders)
