[package]
name = "voxtype"
version = "0.1.0"
description = "VoxType - AI voice input for desktop. Speak naturally, get polished text anywhere."
authors = ["VoxType Contributors"]
edition = "2021"

[lib]
name = "voxtype_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"

# Audio
cpal = "0.15"

# Keyboard simulation
enigo = { version = "0.2", features = ["serde"] }

# Clipboard
arboard = "3"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Chrono for timestamp
chrono = { version = "0.4", features = ["serde"] }

# WAV encoding for audio
hound = "3"

# Async trait (needed for STT/LLM provider abstractions)
async-trait = "0.1"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt"] }
